# master_thesis

./: .gitignore  README.md  pyproject.toml
scripts/: build_xml.ipynb  config.py  create.py  create_random_patients.ipynb  hcpcs.ipynb  knn.ipynb  knn_example.ipynb  pcs.ipynb  preprocessing_hcpcs.ipynb  thesis.ipynb  trials.ipynb  try.py
src/master_thesis/: config.py  cross_validation.py  drg_to_icd_cm.py  hcpcs.py  helper_functions.py  main.py  model_wrapper.py  preprocessing.py  processing.py  similarity_levels.py  simple_icd_10_cm.py  simple_icd_10_pcs.py  train_dis_mat.py
src/master_thesis/simple_icd_10_pcs/: __init__.py  build_xml.ipynb  simple_icd_10_pcs.py
src/master_thesis/simple_icd_10_pcs/data/: icd10pcs_tables_2021.xml
